<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/major_recomendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsextrabold"
            android:text="@string/major"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/sector_recomendation"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/university"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
