<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="443dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="329dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_1" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/to_sign_in"
        android:textColor="@color/white"
        android:alpha="0"
        tools:alpha="100"

        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/email"
        android:textColor="#257063"
        android:textSize="20sp"
        android:alpha="0"
        tools:alpha="100"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/password"
        android:textColor="#257063"
        android:textSize="20sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="@+id/edRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/edRegisterEmail" />

    <EditText
        android:id="@+id/edRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:alpha="100" />

    <EditText
        android:id="@+id/edRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginEnd="28dp"
        android:alpha="0"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:alpha="100" />

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#FBFAFA"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="10sp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edRegisterPassword" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/sign_up"
        android:textAlignment="textStart"

        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/signinBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:alpha="100" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/hint_signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintTop_toBottomOf="@+id/signinBtn"
        app:layout_constraintVertical_bias="0.085" />

</androidx.constraintlayout.widget.ConstraintLayout>